Some refactoring to remove single use vars